# lensing_and_precession

./: .gitignore  README.md  pyproject.toml
jupyter/: plot_waveforms.ipynb
lensing_and_precession/: __init__.py
lensing_and_precession.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
modules/: contour_multimodality.py  contours_ver0.py  contours_ver1.py  contours_ver1_draft.py  contours_ver2.py  contours_ver2_fast.py  contours_ver3.py  functions_Lensing.py  functions_Precessing.py  functions_vec.py  functions_ver0.py  functions_ver1.py  functions_ver1_draft.py  functions_ver2.py  functions_ver2_draft.py  plot_utils.py
output/: mcz20.0_td0.022_I0.4_omega3.0-4.0_theta6.0-10.0_101x101_{'theta_S' 1.0471975511965976, 'phi_S' 0.7853981633974483, 'theta_J' 0.5235987755982988, 'phi_J' 1.0471975511965976}.pkl  mcz20.0_td0.022_I0.6_omega0-5_theta0-15_20x20_{'theta_S' 1.0471975511965976, 'phi_S' 0.7853981633974483, 'theta_J' 0.5235987755982988, 'phi_J' 1.0471975511965976}.pkl  mcz20.0_td0.022_I0.6_omega0-5_theta0-15_51x151_{'theta_S': 1.0471975511965976, 'phi_S': 0.7853981633974483, 'theta_J': 0.5235987755982988, 'phi_J': 1.0471975511965976}.pkl  mcz20.0_td0.02_I0.6_omega0-5_theta0-15_101x101_{'theta_S': 1.0471975511965976, 'phi_S': 0.7853981633974483, 'theta_J': 0.5235987755982988, 'phi_J': 1.0471975511965976}.pkl  mcz20.0_td0.02_I0.6_omega0-5_theta0-15_41x41_{'theta_S': 1.0471975511965976, 'phi_S': 0.7853981633974483, 'theta_J': 0.5235987755982988, 'phi_J': 1.0471975511965976}.pkl  mcz20.0_td0.03_I0.6_omega0-5_theta0-15_20x20_{'theta_S' 1.0471975511965976, 'phi_S' 0.7853981633974483, 'theta_J' 0.5235987755982988, 'phi_J' 1.0471975511965976}.pkl  (+1 more)
(+33 files in other folders)
